[package]
name = "secprobe-desktop"
version = "0.1.0"
edition = "2021"
description = "SecProbe Desktop — AI Security Audit Tool"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secprobe_core = { path = "..", package = "secprobe" }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
